--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "aqua-estimate-v2",
+  "name": "@estimatix/app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start -p 3000",
+    "lint": "next lint",
+    "typecheck": "tsc -p tsconfig.json --noEmit"
   },
   "dependencies": {
     "react": "19.1.0",
@@ -18,8 +19,9 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
     "@eslint/eslintrc": "^3"
